--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -27,37 +27,37 @@ jobs:
       - name: VCS Checkout
         uses: actions/checkout@v4
         with:
+          # TODO: submodules: true (link design system)
           fetch-depth: 0
 
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Install mdBook
+        uses: dtolnay/install@master
+        with:
+          crate: mdbook
 
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v2
         with:
           mdbook-version: 'latest'
 
-      - name: Install preprocessor mdbook-admonish
-        uses: dtolnay/install@master
-        with:
-          crate: mdbook-admonish
+      #- name: Install preprocessor mdbook-admonish
+      #  run: cargo install mdbook-admonish
 
-      - name: Install preprocessor mdbook-mermaid
-        uses: dtolnay/install@master
-        with:
-          crate: mdbook-mermaid
+      #- name: Install preprocessor mdbook-mermaid
+      #  run: cargo install mdbook-mermaid
 
-      - name: Install preprocessor mdbook-preprocessor-graphql-playground
-        uses: dtolnay/install@master
-        with:
-          crate: mdbook-preprocessor-graphql-playground
+      #- name: Install preprocessor mdbook-preprocessor-graphql-playground
+      #  run: cargo install mdbook-preprocessor-graphql-playground
 
       - name: Build Book
         working-directory: .
         run: mdbook build
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
