Reenable css files

--- a/book.toml
+++ b/book.toml
@@ -24,7 +24,6 @@ title = "This Month in Reactive Graph"
 #additional-js = ["mermaid.min.js", "mermaid-init.js", "graphql-playground-react-middleware.js", "graphql-playground.js"]
 additional-css = [
     "././book.css",
-    # "././mdbook-admonish.css",
-    # "graphql-playground.css",
-    # "./mdbook-admonish.css"
+    "././mdbook-admonish.css",
+    "././graphql-playground.css",
 ]
