Reenable mdbook plugins

--- a/book.toml
+++ b/book.toml
@@ -7,16 +7,16 @@ multilingual = false
 src = "src"
 title = "This Month in Reactive Graph"
 
-#[preprocessor.mermaid]
-#command = "mdbook-mermaid"
-#
-#[preprocessor.admonish]
-#command = "mdbook-admonish"
-#assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
-#
-#[preprocessor.graphql-playground]
-#command = "mdbook-graphql-playground"
-#renderer = ["html"]
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
+
+[preprocessor.graphql-playground]
+command = "mdbook-graphql-playground"
+renderer = ["html"]
 
 [output]
 
