--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -43,14 +43,14 @@ jobs:
         with:
           mdbook-version: 'latest'
 
-      #- name: Install preprocessor mdbook-admonish
-      #  run: cargo install mdbook-admonish
+      - name: Install preprocessor mdbook-admonish
+        run: cargo install mdbook-admonish
 
-      #- name: Install preprocessor mdbook-mermaid
-      #  run: cargo install mdbook-mermaid
+      - name: Install preprocessor mdbook-mermaid
+        run: cargo install mdbook-mermaid
 
-      #- name: Install preprocessor mdbook-preprocessor-graphql-playground
-      #  run: cargo install mdbook-preprocessor-graphql-playground
+      - name: Install preprocessor mdbook-preprocessor-graphql-playground
+        run: cargo install mdbook-preprocessor-graphql-playground
 
       - name: Build Book
         working-directory: .
