--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -44,13 +44,19 @@ jobs:
           mdbook-version: 'latest'
 
       - name: Install preprocessor mdbook-admonish
-        run: cargo install mdbook-admonish
+        uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: mdbook-admonish
 
       - name: Install preprocessor mdbook-mermaid
-        run: cargo install mdbook-mermaid
+        uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: mdbook-mermaid
 
       - name: Install preprocessor mdbook-preprocessor-graphql-playground
-        run: cargo install mdbook-preprocessor-graphql-playground
+        uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: mdbook-preprocessor-graphql-playground
 
       - name: Build Book
         working-directory: .
