--- a/book.toml
+++ b/book.toml
@@ -28,6 +28,32 @@ additional-js = [
     "graphql-playground.js"
 ]
 additional-css = [
+    "./src/design/public/css/open-props.min.css",
+    "./src/design/public/css/open-props-buttons.min.css",
+    "./src/design/public/css/open-props-normalize.min.css",
+    "./src/design/public/fonts/fonts.css",
+    "./src/design/public/css/variables/palette.css",
+    "./src/design/public/css/variables/gradients.css",
+    "./src/design/public/css/variables/surface.css",
+    "./src/design/public/css/variables/patterns.css",
+    "./src/design/public/css/variables/text.css",
+    "./src/design/public/css/variables/brand.css",
+    "./src/design/public/css/atoms/blockquote.css",
+    "./src/design/public/css/atoms/lists.css",
+    "./src/design/public/css/atoms/subtitle.css",
+    "./src/design/public/css/atoms/surface.css",
+    "./src/design/public/css/atoms/tag.css",
+    "./src/design/public/css/atoms/title.css",
+    "./src/design/public/css/atoms/token.css",
+    "./src/design/public/css/molecules/alert.css",
+    "./src/design/public/css/molecules/article.css",
+    "./src/design/public/css/molecules/card.css",
+    "./src/design/public/css/molecules/emphasis-box.css",
+    "./src/design/public/css/molecules/intro.css",
+    "./src/design/public/css/molecules/list-box.css",
+    "./src/design/public/css/molecules/logo.css",
+    "./src/design/public/css/molecules/zebra-box.css",
+    "./src/design/public/css/organisms/organisms.css",
     "././book.css",
     "././mdbook-admonish.css",
     "././graphql-playground.css",
