Allow manual run

--- a/.github/workflows/monthly-issue.yml
+++ b/.github/workflows/monthly-issue.yml
@@ -2,6 +2,9 @@ name: Monthly Issue
 on:
   schedule:
     - cron: "0 0 28 * *"
+  # Run manually
+  workflow_dispatch:
+
 jobs:
   issue:
     runs-on: ubuntu-latest
