Generate RSS feed and added a simple link

--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -59,6 +59,11 @@ jobs:
           tool: mdbook-tera
           locked: false
 
+      - name: Install mdbook-rss
+        uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: mdbook-rss
+
       - name: Install mdbook-preprocessor-graphql-playground
         uses: taiki-e/cache-cargo-install-action@v2
         with:
