--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -63,6 +63,7 @@ jobs:
         uses: taiki-e/cache-cargo-install-action@v2
         with:
           tool: mdbook-rss
+          locked: false
 
       - name: Install mdbook-preprocessor-graphql-playground
         uses: taiki-e/cache-cargo-install-action@v2
