--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -7,6 +7,7 @@ on:
       - "src/**"
       - "book.css"
       - "book.toml"
+      - "README.md"
       - ".github/workflows/book.yml"
   pull_request:
     branches: [ main ]
@@ -14,6 +15,7 @@ on:
       - "src/**"
       - "book.css"
       - "book.toml"
+      - "README.md"
       - ".github/workflows/book.yml"
 
 env:
