--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - "src/**"
+      - "theme/**"
       - "book.css"
       - "book.toml"
       - "README.md"
