--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -14,6 +14,7 @@ on:
     branches: [ main ]
     paths:
       - "src/**"
+      - "theme/**"
       - "book.css"
       - "book.toml"
       - "README.md"
